# TetrisSP

./: .gitignore  CMakeLists.txt  README.md  TetrisSP.cpp  TetrisSP.h  audio.cc  audio.h  font.cc  font.h  game-window.cc  game-window.h  graphics.cc  graphics.h  loop-node.cc  loop-node.h  tetris.cc  texture.cc  texture.h  tty.h
assets/: field-info.json  frame-info.yaml  minos-info.json  tetrio-info.yaml
cmake/: sdl.cmake
controller/: CMakeLists.txt
game/: CMakeLists.txt  game.cpp  game.h
game/animation/: animation.hpp
game/color/: color.hpp
game/controller/: controller.hpp
game/model/: homeModel.hpp  iModel.hpp  model.cpp  soloModel.hpp
game/src/: game.cc  game.h  resource-manager.cpp  resource-manager.h  sdl-error-handle.h
game/src/color/: argb.cc  argb.h
game/src/request/: request.h
game/src/response/: response.h
game/src/scene/: matrix.cc  matrix.h
game/src/sdl/: texture.cc  texture.h
game/src/server/: server.cc  server.h  single-game-service.cc  single-game-service.h  srs.cc  srs.h  tetris-engine.cc  tetris-engine.h
game/src/tetrimino/: generator.h  mino.cc  mino.h  seven-bag-generator.cc  seven-bag-generator.h  tetrimino.h
game/src/ui/: simple-ui.cc  simple-ui.h  ui.h  widget.h
game/src/ui/controller/: ui-controller.cc  ui-controller.h
game/src/ui/game-ui/: matrix.cc  matrix.h  standard-game-ui.cpp  standard-game-ui.h
game/src/ui/index-ui/: index-ui.cc  index-ui.h  selection-bar.cc  selection-bar.h
game/src/utils/: point.cc  point.h  utils.cc  utils.h
game/types/: types.hpp
scene/: game-index.cc  game-index.h  generator.cc  generator.h  matrix.cc  matrix.h  scene.cc  scene.h  tetris-actuator.cc  tetris-actuator.h  tetris-operator.cc  tetris-operator.h  the-game.cc  the-game.h
src/: TetrisSP.cpp  TetrisSP.h  tetris-sp.cpp
view/: CMakeLists.txt
